# ovumpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ovum/: client.py  test.py
ovum/const/: address_mapping.py
ovum/dto/: ovum_dto.py
